[package]
name = "named_func_args"
version = "1.0.0-beta.1"
edition = "2021"
description = "Proc macro to create boilerplate to simulate function with named arguments"
readme = "README.md"
repository = "https://github.com/DoumanAsh/named_func_args"
documentation = "https://docs.rs/named_func_args/"
license = "BSL-1.0"
keywords = ["func", "function", "compile-time", "macro"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[lib]
proc-macro = true
